	* Raised feeditadvanced from 0.1.0 to 0.1.1
	* Added feature #5613: Enable/integrate conditions in Page TSconfig
	* Follow-up to feature #5613: Added test cases for matching conditions
	* Fixed bug #11610: t3lib_transl8tools::translationInfo() should return also CType of the element (thanks to Michael Klapper)

2009-10-20  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #2314: When moving records the translation do not move with it (thanks to Tolleiv Nietsch)
	* Fixed bug #539: lang-children "get lost"(should be deleted) when deleting parent-record in default language (thanks to Tolleiv Nietsch)
	* Fixed bug #10081: t3lib_div must not die if a locallang file is not found (thanks to Franz Holzinger)
	* Fixed bug #12194: The filetree does not show whether a folder is write protected

2009-10-20  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 0.9.10

2009-10-19  Oliver Hader  <oliver@typo3.org>

	* Follow-up to test #12153: Fixed bug in language condition tests
	* Follow-up to test #12153: Refactored browserInfoHookIsCalled() test case
	* Follow-up to test #12153: Added test cases for device condition

2009-10-19  Rupert Germann  <rupi@gmx.li>

	* Added Feature #12138: Use flashmessages to display messages from tcemain
	* Fixed bug #12188: Double display of flashmessages
	* Fixed bug #11694: Table sys_refindex / KEY lookup_string not UTF-8 compatible  (thanks to Morton Jonuschat)
	* Fixed bug #11853: PHP warning in file module when uploading files with the flashuploader (thanks to Georg Ringer)

2009-10-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12240: [Media CE] using a flash video file doesn't work
	* Fixed bug #12113: Setting default values for $BE_USER->uc doesn't work for multi-dimensional arrays (thanks to Steffen Gebert)
	* Fixed bug #10897: typo3/db_new.php prompts to create records in hidden, static and readonly tables
	* Fixed bug #12239: Record statistics use hidden tables and isn't formated well
